Finish all models and controllers with their respective tests
